<resources>
    <string name="app_name">PartyPack</string>
    <string name="BUHGamerName">Имя Игрока</string>
    <string name="BUH">Сделать выстрел</string>
    <string name="AddBUH">Добавить</string>
    <string name="RusRul">Shot Shooter</string>
    <string name="Game">Игры</string>
    <string name="Sovet">Советы</string>
    <string name="Bartender">Собутыльник</string>
    <string name="Listofplayers">Список участников</string>
    <string name="DeleteBUH">Упит(а)</string>
    <string name="Heroes">Герои по вызову</string>
    <string name="HeroWait">Герой</string>
    <string name="INever">Я никогда не...</string>
    <string name="Nemoy">Немой вопрос</string>
    <string name="ToD">Правда или действие</string>
    <string name="Settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>