<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnHeroes"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape_main"
        android:drawableLeft="@drawable/ic_heroes_logo"
        android:ellipsize="none"
        android:gravity="top|center"
        android:onClick="HeroesCall"
        android:text="@string/Heroes"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:backgroundTint="#57C4C4C4"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/btnToD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNever" />

    <Button
        android:id="@+id/btnToD"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/buttonshape_main"
        android:drawableLeft="@drawable/ic_tod_logo"
        android:ellipsize="none"
        android:gravity="top|left"
        android:onClick="ToDCall"
        android:text="Правда или действие"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:backgroundTint="#57C4C4C4"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHeroes" />

    <Button
        android:id="@+id/btnNemoy"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape_main"
        android:drawableLeft="@drawable/ic_nemoi_logo"
        android:ellipsize="none"
        android:gravity="top|center"
        android:onClick="NemoyCall"
        android:text="@string/Nemoy"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#57C4C4C4"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/btnNever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRusRul" />

    <Button
        android:id="@+id/btnNever"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape_main"
        android:drawableLeft="@drawable/ic_never_logo"
        android:ellipsize="none"
        android:gravity="top|center"
        android:onClick="NeverCall"
        android:text="@string/INever"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#57C4C4C4"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/btnHeroes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNemoy" />

    <Button
        android:id="@+id/btnRusRul"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape_main"
        android:drawableLeft="@drawable/ic_shot_shooter_logo"
        android:ellipsize="none"
        android:gravity="top|center"
        android:onClick="RusRulCall"
        android:text="@string/RusRul"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#57C4C4C4"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/btnNemoy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>