<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/ic_shot_bsbg"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="110dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <Button
        android:id="@+id/btnShot"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonshape"
        android:ellipsize="none"
        android:onClick="BUHCall"
        android:text="@string/BUH"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#7AFF0000"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/editBUHgamer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBUHgamer"
        android:layout_width="310dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="@drawable/textsape"
        android:ems="10"
        android:gravity="center"
        android:hint="Введите имя игрока"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShot" />

    <ListView
        android:id="@+id/lstPlayers"
        android:layout_width="270dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginLeft="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lstPoints"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddgamer"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/lstPlayers"
        android:layout_below="@+id/editBUHgamer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/btnDelgamer"
        android:layout_toLeftOf="@+id/btnDelgamer"
        android:background="@drawable/buttonshape"
        android:ellipsize="none"
        android:onClick="AddBUHCall"
        android:text="@string/AddBUH"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:backgroundTint="#42ACB7"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/lstPlayers"
        app:layout_constraintEnd_toStartOf="@+id/btnDelgamer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBUHgamer" />

    <Button
        android:id="@+id/btnDelgamer"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/lstPlayers"
        android:layout_below="@+id/editBUHgamer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttonshape"
        android:ellipsize="none"
        android:onClick="DeleteBUHCall"
        android:text="@string/DeleteBUH"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textSize="24sp"
        app:backgroundTint="#161616"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/lstPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddgamer"
        app:layout_constraintTop_toBottomOf="@+id/editBUHgamer" />

    <ListView
        android:id="@+id/lstPoints"
        android:layout_width="50dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lstPlayers" />

</androidx.constraintlayout.widget.ConstraintLayout>